@@ -137,7 +137,7 @@ public class SystemProcessLauncher {
             final AtomicBoolean isDone = new AtomicBoolean(false);
             final Thread reader = new Thread(() -> {
                 try {
-                    log.info("thread #{}, start receiving stream from external process", Thread.currentThread().getId());
+                    log.info("thread #{}, start receiving stream from external process", Thread.currentThread().threadId());
                     streamHolder.is = process.getInputStream();
                     int c;
                     isRun.set(true);
@@ -174,10 +174,10 @@ public class SystemProcessLauncher {
                 timeoutThread = new Thread(() -> {
                     try {
                         while (!isRun.get()) {
-                            log.info("thread #{} is waiting for reader thread, time - {}", Thread.currentThread().getId(), new Date());
+                            log.info("thread #{} is waiting for reader thread, time - {}", Thread.currentThread().threadId(), new Date());
                             Thread.sleep(TimeUnit.MILLISECONDS.toMillis(500));
                         }
-                        log.info("thread #{}, time before sleep - {}", Thread.currentThread().getId(), new Date());
+                        log.info("thread #{}, time before sleep - {}", Thread.currentThread().threadId(), new Date());
                         while (true) {
                             Thread.sleep(TimeUnit.SECONDS.toMillis(2));
                             if (interrupters.stream().anyMatch(Supplier::get)) {
@@ -189,7 +189,7 @@ public class SystemProcessLauncher {
                                 return;
                             }
                         }
-                        log.info("thread #{}, time before destroy - {}", Thread.currentThread().getId(), new Date());
+                        log.info("thread #{}, time before destroy - {}", Thread.currentThread().threadId(), new Date());
 
                         final LinkedList<ProcessHandle> handles = new LinkedList<>();
                         collectHandlers(handles, process.toHandle());
@@ -200,10 +200,10 @@ public class SystemProcessLauncher {
                         destroy(handles);
                         timeoutMessage.append(String.format(TIMEOUT_MESSAGE, timeoutBeforeTerminate));
                         isTerminated.set(true);
-                        log.info("thread #{}, time after destroy - {}",  Thread.currentThread().getId(), new Date());
+                        log.info("thread #{}, time after destroy - {}",  Thread.currentThread().threadId(), new Date());
                     } catch (InterruptedException e) {
                         // this is a normal operation so it'll be debug level
-                        log.debug("thread #{}, current thread was interrupted", Thread.currentThread().getId());
+                        log.debug("thread #{}, current thread was interrupted", Thread.currentThread().threadId());
                     }
                 });
                 timeoutThread.start();
